SimpleWeather: refresh design pt.2
* Move weather extra details to main viewmodel
* Add weather details to grid
* Add more weather details (moon phase, moonset/rise, uv index, beaufort/wind, dewpoint) for supported providers
* Refresh WeatherNow & LocationsPage
* Add SwipeControl to LocationPanels
* +More...

--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -19,7 +19,7 @@
             <helpers:BooleanToVisibilityConverter x:Key="inverseBooleanToVisibilityConverter" IsInverse="True" />
             <helpers:InverseBooleanConverter x:Key="inverseBooleanConverter" />
             <helpers:InverseVisibilityConverter x:Key="inverseVisibilityConverter" />
-            <toolkitConverters:StringVisibilityConverter x:Key="stringVisibilityConverter" />
+            <helpers:StringVisibilityConverter x:Key="stringVisibilityConverter" />
             <SolidColorBrush x:Key="SimpleBlue" Color="#0070c0" />
             <SolidColorBrush x:Key="SimpleBlueDark" Color="#00468f" />
             <SolidColorBrush x:Key="SimpleBlueLight" Color="#599ef3" />
