--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -11,7 +11,7 @@
     Tag="{x:Bind ViewModel.LocationData, Mode=OneWay}">
 
     <Grid Background="{x:Bind ViewModel.Background, FallbackValue='#FF006FBF', Mode=OneWay}"
-          Height="100" BorderBrush="White"
+          Height="100" BorderBrush="White" CornerRadius="2.5"
           Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
