WeatherNow: add line graphs for hourly forecast
* Add line graph for temperature, wind speed and precipitation
* Add toggle for graph view and detail (card) view
* Only if available

--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -43,6 +43,14 @@
                 <Setter Property="HorizontalAlignment" Value="Center"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
+            <Style x:Key="WeatherFontIcon" TargetType="FontIcon">
+                <Setter Property="Foreground" Value="White" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="FontFamily" Value="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons" />
+                <Setter Property="FontStyle" Value="Normal" />
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
             <ControlTemplate x:Key="ToastPromptStyle" TargetType="coding4fun:ToastPrompt">
                 <Border CornerRadius="15" Background="{TemplateBinding Background}"
                     Height="{TemplateBinding Height}"
